<resources>
    <string name="app_name">集成指挥</string>
    <string name="smssdk_resend_identify_code">重新获取验证码</string>
    <string name="cameraback">返回</string>
    <string name="loading">加载中</string>
    <string name="mainui_cx">查询</string>
    <string name="mainui_bk">布控</string>
    <string name="mainui_wd">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="miantitle">省交警移动指挥系统</string>
    <string name="logintitle">青海省交警移动终端</string>
    <string name="mainui_topjsr">驾驶人</string>
    <string name="mainui_topjdc">机动车</string>
    <string name="text_login">登录</string>
    <string name="text_cancle">重置</string>
    <string name="text_set">系统设置</string>
    <string name="text_query">查询</string>
    <string name="up_title">升级系统</string>
    <string name="up_content">更新版本</string>
    <string name="up_content1">版本说明</string>
    <string name="up_up">升级</string>
    <string name="up_tip">进度：下载</string>
    <string name="upgrade_success">下载成功，版本号为：</string>
    <string name="upgrade_install">，点击确定进行安装</string>
    <string name="upgrade_defult">升级失败，请重试</string>
    <string name="upgrade_exception">升级异常，请重新启动再进行操作</string>
    <string name="dialog_tips">提示：</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="now_upgrade">正在下载安装包，请稍等......</string>
    <string name="init_ip">IP地址：</string>
    <string name="init_jk">接口序列号：</string>
    <string name="init_bmbh">部门编号：</string>
    <string name="init_pda">PDA唯一码：</string>
    <string name="init_tip1">请填写完整</string>
    <string name="init_tip2">请输入正确的IP</string>
    <string name="login_pda">手机IMEI码获取失败</string>
    <string name="Please_enter_the_correct_user_name_and_password">请输入正确的用户名和密码</string>
    <string name="logining">登录中……</string>
    <string name="company_name">四川星盾科技股份有限公司技术支持</string>
    <string name="failed_to_get_version_number">应用版本号获取失败</string>
    <string name="main_text01">信息查询</string>
    <string name="jdcjbxxcx">查询机动车\n基本信息</string>
    <string name="jsrjbxxcx">查询驾驶人\n基本信息</string>
    <string name="wfdmcx">违法代码查询</string>
    <string name="jczh">集成指挥</string>
    <string name="bksz">卡口设置</string>
    <string name="yjxx">预警处置</string>
    <string name="tzlr">台帐录入</string>
    <string name="wfcl">违法处理</string>
    <string name="jycfjds">简易处罚决定书</string>
    <string name="qzcstzs">强制措施通知书</string>
    <string name="dzjklr">电子监控录入</string>
    <string name="hpzl">号牌种类</string>
    <string name="hphm">号牌号码</string>
    <string name="clpp">车辆品牌</string>
    <string name="sfdqc">是否盗抢车</string>
    <string name="csys">车身颜色</string>
    <string name="fzjg">发证机关</string>
    <string name="zsxzqh">住所行政区划</string>
    <string name="clzt">车辆状态</string>
    <string name="jyyxqz">检验有效期止</string>
    <string name="yjdcbgyy">原机动车变更原因</string>
    <string name="hpqyrq">号牌弃用日期</string>
    <string name="ccdjrq">初次登记日期</string>
    <string name="jdcsyr">机动车所有人</string>
    <string name="syxz">使用性质</string>
    <string name="clsbdm">车辆识别代码</string>
    <string name="gcjk">国产/进口</string>
    <string name="bxzzrq">保险终止日期</string>
    <string name="hgbzbh">合格标志编号</string>
    <string name="fdjh">发动机号</string>
    <string name="xszxph">证芯编号</string>
    <string name="plgl">排量/功率</string>
    <string name="dybj">抵押标记</string>
    <string name="wkcc">外廓尺寸</string>
    <string name="jbxx">基本信息</string>
    <string name="wfjl">违法记录</string>
    <string name="jdccxmx">机动车查询明细</string>
    <string name="jdcxxcx">机动车信息查询</string>
    <string name="jsrxxcx">驾驶人信息查询</string>
    <string name="no_datas">~~~未查询到数据~~~</string>
    <string name="jsrcxmx">驾驶人查询明细</string>
    <string name="xm">姓名</string>
    <string name="xxyd">学习园地</string>
    <string name="zjmc">证件名称</string>
    <string name="zjcx">准驾车型</string>
    <string name="csrq">出生日期</string>
    <string name="dhhm">电话号码</string>
    <string name="dabh">档案编号</string>
    <string name="sfzh">身份证号</string>
    <string name="zsdz">住所地址</string>
    <string name="lxfs">联系方式</string>
    <string name="jszzt">驾驶证状态</string>
    <string name="clrq">初领日期</string>
    <string name="yxqz">有效期止</string>
    <string name="zhqfrq">最后清分日期</string>
    <string name="dqjf">当前记分</string>
    <string name="zhmfqfrq">最后满分\n清分日期</string>
    <string name="xyqfrq">下一清分日期</string>
    <string name="xytyrq">下一体验日期</string>
    <string name="dsr">当事人：</string>
    <string name="wfsj">违法时间：2013-11-08 09:56:00</string>
    <string name="wfdz">违法地址：汽运公司-西门桥</string>
    <string name="wfxw">违法行为：1090</string>
    <string name="wfjbxx">违法基本信息</string>
    <string name="wfsj01">违法时间</string>
    <string name="xzqh">行政区划</string>
    <string name="dllx">道路类型</string>
    <string name="wfdd">道路代码</string>
    <string name="wfdz01">违法地址</string>
    <string name="zqmj">执勤民警</string>
    <string name="fxjg">发现机关</string>
    <string name="jtfs">交通方式</string>
    <string name="sglx">事故类型</string>
    <string name="xxly">信息来源</string>
    <string name="lrr">录入人</string>
    <string name="lrsj">录入时间</string>
    <string name="jsjq">拒收拒签</string>
    <string name="ryclxx">人员车辆信息</string>
    <string name="dsr01">当事人</string>
    <string name="lxdh">联系电话</string>
    <string name="zzxq">住址辖区</string>
    <string name="syr">所有人</string>
    <string name="clfl">车辆分类</string>
    <string name="clyt">车辆用途</string>
    <string name="wgxwcf">违规行为处罚</string>
    <string name="cfzl">处罚种类</string>
    <string name="wfdm01">违法代码</string>
    <string name="wfjf">违法记分</string>
    <string name="fkje">罚款金额</string>
    <string name="zkys">暂扣月数</string>
    <string name="jlts">拘留天数</string>
    <string name="jbr">经办人</string>
    <string name="cflb">处罚类别</string>
    <string name="cfbh">处罚编号</string>
    <string name="clsj">处理时间</string>
    <string name="cjjg">处理机关</string>
    <string name="wftp">违法图片</string>
    <string name="jkbj">缴款标记</string>
    <string name="wfdm">违法代码：</string>
    <string name="wfnr">违法内容：</string>
    <string name="wfnr01">违法内容</string>
    <string name="sbkk">设备卡口</string>
    <string name="gaxq">公安案情</string>
    <string name="yjlx">预警类型</string>
    <string name="jtwf">交通违法</string>
    <string name="cjry">出警人员</string>
    <string name="ksjsyj">开始接收预警</string>
    <string name="yjzp">预警照片</string>
    <string name="yjzlx">预警子类型</string>
    <string name="yjsj">预警时间</string>
    <string name="cllxys">车辆\n类型/颜色</string>
    <string name="gcsj">过车时间</string>
    <string name="xssd">行驶速度</string>
    <string name="xsqy">行驶区域</string>
    <string name="sxdd">行驶地点</string>
    <string name="sbzl">设备种类</string>
    <string name="sbmc">卡口名称</string>
    <string name="qsxx">签收信息</string>
    <string name="qsjg">签收结果</string>
    <string name="sfcj">是否出警</string>
    <string name="yjqs">预警签收</string>
    <string name="xxfk">信息反馈</string>
    <string name="ljqk">拦截情况</string>
    <string name="ylj">已拦截到</string>
    <string name="wlj">未拦截到</string>
    <string name="sfxycl">是否嫌疑车辆</string>
    <string name="fxyclyy">非嫌疑\n车辆原因</string>
    <string name="ljqkms">拦截情况描述</string>
    <string name="czfs">处置结果</string>
    <string name="ppjy">批评教育</string>
    <string name="yjfk">预警信息处置反馈</string>
    <string name="yjxq">预警详情</string>
    <string name="tzjsyj">停止接收预警</string>
    <string name="clxx">车辆信息</string>
    <string name="zdcllx">重点车辆类型</string>
    <string name="cllx">车辆类型</string>
    <string name="wfcs">违法次数</string>
    <string name="wfwcl">违法未处理</string>
    <string name="yqwjy">逾期未检验</string>
    <string name="yqwbf">逾期未报废</string>
    <string name="lxdz">联系地址</string>
    <string name="jsyxx">驾驶员信息</string>
    <string name="ccslrq">初次申领日期</string>
    <string name="sfcf">是否超分</string>
    <string name="yqwsy">逾期未审验</string>
    <string name="yqwhz">逾期未换证</string>
    <string name="sfzjbf">是否准驾不符</string>
    <string name="jcxx">检查信息</string>
    <string name="sfd">始发地</string>
    <string name="mdd">目的地</string>
    <string name="zfz">执法站</string>
    <string name="ywfjsy">有无副驾驶员</string>
    <string name="gpszb">GPS装备情况</string>
    <string name="hdzks">核定载客数</string>
    <string name="sjzks">实际载客数</string>
    <string name="sfjbc">是否接驳车</string>
    <string name="bxpc">班线频次</string>
    <string name="sftbjqx">是否投保\n交强险</string>
    <string name="jcycnr">处置情况描述</string>
    <string name="jcqkms">检查情况描述</string>
    <string name="tj">提交</string>
    <string name="NET_WORK_FAILED">网络请求失败，请重试!!!</string>
    <string name="wljdyy">未拦截到原因</string>
    <string name="ERROR_TIPS_01">请选择处置结果</string>
    <string name="dqs">待签收</string>
    <string name="yqswcl">已签收未处理</string>
    <string name="ycl">已处理</string>
    <string name="app_notifaction">有新任务，注意查收！！！</string>
    <string name="choicehpzl">选择号牌种类</string>
    <string name="sfwfjy">是否违法运营</string>
    <string name="sjzzl">实际载质量</string>
    <string name="sfwjsz">是否无证驾驶</string>
    <string name="qdystxz">是否取得道\n路运输通行证</string>
    <string name="sfzdaq">是否重大案情</string>
    <string name="sfxyc">是否嫌疑车辆</string>
    <string name="czjg">处置结果</string>
    <string name="ERROR_TIPS_02">请先打开相机权限！！！</string>
    <string name="SYSTEM_TIPS_DELETED">已删除</string>
    <string name="SYSTEM_TIPS_SING">请选择签收信息!!!</string>
    <string name="jccllx">检查车辆类型</string>
    <string name="fjsrsfz">副驾驶人 身份证</string>
    <string name="fjsysfz">副驾驶员 身份证</string>
    <string name="zerofoursfpljs">是否疲劳驾驶</string>
    <string name="zerofouraqsbsfhg">安全设备是否合格</string>
    <string name="zerofourcllthwsfhg">车辆轮胎花纹是否合格</string>
    <string name="zerfoursfaqd">是否系安全带</string>
    <string name="zerofoursfagdztfgbs">是否按规定粘贴反光标识</string>
    <string name="zerfoursfazchfhzz">是否安装侧后防护装置</string>
    <string name="zerofoursfffgz">是否非法改装</string>
    <string name="zerfoursfcz">是否超载</string>
    <string name="zerofourhdzzl">核定载质量</string>
    <string name="zerfoursjzzl">实际载质量</string>
    <string name="zerofoursjzks">实际载客数</string>
    <string name="sfxghptjsbs">是否悬挂或喷涂警示标志</string>
    <string name="sfajdsjxs">是否按指定时间行驶</string>
    <string name="sfazdlxxs">是否按指定路线行驶</string>
    <string name="sfqddlystxz">是否取得道路运输通行证</string>
    <string name="jcclzlx">检查车辆 子类型</string>
    <string name="srzk">驶入站口</string>
    <string name="sczk">驶出站口</string>
    <string name="yyyxm">押运员姓名</string>
    <string name="yyydh">押运员电话</string>
    <string name="yyzjh">押运员 证件号码</string>
    <string name="whpzl">危化品种类</string>
    <string name="whpmc">危化品名称</string>
    <string name="yqy">运行区域</string>
    <string name="ljjf">累计记分</string>
    <string name="zlxwslx">文书类型</string>
    <string name="jszzl">驾驶证种类</string>
    <string name="zjhm">证件号码</string>
    <string name="dldm">路段号码</string>
    <string name="gls">公里数</string>
    <string name="ms">米数</string>
    <string name="cfjg">处罚结果</string>
    <string name="jkfs">交款方式</string>
    <string name="flyj">法律依据</string>
    <string name="qzcs">强制措施</string>
    <string name="dsryy">当事人异议</string>
    <string name="bz">备注</string>
    <string name="mjyj">民警意见</string>
    <string name="wfxw01">违法行为</string>
    <string name="scz">实测值</string>
    <string name="bzz">标准值</string>
    <string name="jkrq">交款日期</string>
    <string name="sgdj">事故等级</string>
    <string name="clsbdh">车辆识别代号</string>
    <string name="zsxxdz">住所详细地址</string>
    <string name="wslb">文书类别</string>
    <string name="qzcslx">强制措施类型</string>
    <string name="klwpcfd">扣留物品\n存放地</string>
    <string name="sjxm">收缴项目</string>
    <string name="sjwpmc">收缴物品名称</string>
    <string name="sjwpcfd">收缴物品\n存放地</string>
    <string name="jszh">驾驶证号</string>
    <string name="cljg">处理机关</string>
    <string name="SYSTEM_TIPS_SFZMHM">请输入完整证件号码</string>
    <string name="SYSTEM_TIPS_HPHM">请输入完整号牌号码</string>
    <string name="summaryshech">搜索</string>
    <string name="summaryitemno">处罚编号： </string>
    <string name="wfmc">违法行为</string>
    <string name="item_wfxw">违法行为：</string>
    <string name="jcbk">缉查布控</string>
    <string name="flyd">法律园地</string>
    <string name="jscf">接受处罚</string>
</resources>