<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/maintitlebg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_bmbg_shape"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="青海省西宁市交警支队"
                android:paddingLeft="@dimen/dp_10"
                android:textColor="@color/orange"
                android:layout_gravity="center"
                 />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="@dimen/dp_5"
                android:src="@drawable/mian_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="你好，陈警官"
                android:textColor="@color/white"
                android:paddingRight="@dimen/dp_10"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/main_text2"
                android:text="@string/main_text01" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="#d4d3d3" />

            <LinearLayout
                style="@style/main_linear">

                <TextView
                    android:id="@+id/jdcjbxxcx"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_jdccx"
                    android:text="@string/jdcjbxxcx" />

                <TextView
                    android:id="@+id/jsrjbxxcx"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_jsrcx"
                    android:text="@string/jsrjbxxcx" />

                <TextView style="@style/main_text" />

            </LinearLayout>


            <TextView
                style="@style/main_text2"
                android:text="@string/jcbk" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#d4d3d3" />

            <LinearLayout
                style="@style/main_linear">

                <TextView
                    android:id="@+id/bksz"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_bksz"
                    android:text="@string/bksz" />

                <TextView
                    android:id="@+id/yjxx"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_yjxx"
                    android:text="@string/yjxx" />

                <TextView
                    android:id="@+id/tzlr"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_tzlr"
                    android:text="@string/tzlr" />

            </LinearLayout>


            <TextView
                style="@style/main_text2"
                android:text="@string/wfcl" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#d4d3d3" />

            <LinearLayout
                style="@style/main_linear">

                <TextView
                    android:id="@+id/jycfjds"
                    style="@style/main_text"
                    android:drawableTop="@drawable/mian_jycjs"
                    android:text="@string/jycfjds" />

                <TextView
                    android:id="@+id/qzcstzs"
                    style="@style/main_text"
                    android:drawableTop="@drawable/mian_qzcstzs"
                    android:text="@string/qzcstzs" />

                <TextView
                    android:id="@+id/dzjklr"
                    style="@style/main_text"
                    android:drawableTop="@drawable/mian_dzjklr"
                    android:text= "@string/dzjklr" />

            </LinearLayout>


            <TextView
                style="@style/main_text2"
                android:text="@string/xxyd" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#d4d3d3" />

            <LinearLayout
                style="@style/main_linear">

                <TextView
                    android:id="@+id/wfdmcx"
                    style="@style/main_text"
                    android:drawableTop="@drawable/mian_wzdmcx"
                    android:text="@string/wfdmcx" />

                <TextView
                    android:id="@+id/flyd"
                    style="@style/main_text"
                    android:drawableTop="@drawable/main_flyd"
                    android:text="@string/flyd" />

                <TextView style="@style/main_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>