<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_all"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/text_item_bg_blue"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/main_white"
            android:text="@string/item_wfxw"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/wfxw"
            style="@style/item_text"
            android:layout_weight="3"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wfsj"
            style="@style/item_text"
            android:layout_weight="1"
            android:text="@string/wfsj"
            android:textColor="@color/black" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wfjf"
            style="@style/item_text"
            android:layout_weight="1"
            android:text="@string/wfjf"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/fkje"
            style="@style/item_text"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/fkje"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hphm"
            style="@style/item_text"
            android:layout_weight="1"
            android:text="@string/hphm"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/wfzt"
            style="@style/item_text"
            android:layout_weight="1"
            android:text="违法状态"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wfdz"
            style="@style/item_text"
            android:layout_weight="1"
            android:text="@string/wfdz"
            android:textColor="@color/black" />


    </LinearLayout>


</LinearLayout>